2014-09-08 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: handling per dir configurations that have no Rivet directives
    in them, thus leaving the patch field NULL.

2014-09-07 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.h: add field path to rivet_server_conf. This field carries
    a copy of the 'path' field in cmd_parms. This field is NULL for global and <VirtualHost>
    sections whereas for <Directory> sections points to the argument (the pattern matching
    a certain directory)
    * src/experimental/mod_rivet.c: handling of rdc->path to store configuration scripts
    * src/experimental/rivet_prefork_mpm.c: defining request_init and request_cleanup in the
    thread private data
    * src/experimental/apache_config.h: handling of the path field in rivet_server_conf

2014-09-05 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/apache_config.h: removed handling of lines unneeded by this version of mod_rivet
    * src/experimental/rivet_worker_mpm.c:
    * src/experimental/rivet_aprthread_mpm.c: 
    * src/experimental/rivet_prefork_mpm.c: moving reference to configurations
    scripts into their new location on rivet_thread_private
    * src/experimental/mod_rivet.h: running_scripts object defined to store running configurations 
    script wrapped in Tcl_Obj instances and allow construction of database of Tcl scripts bound
    to per-directory configuration. Adding variables for storing running configuration in rivet_thread_private.
    Configuration records now store references to pristine char* buffers for scripts
    * src/experimental/mod_rivet.c: changed referenced to configured scripts to their new location,
    removed redundant calls to Rivet_GetConf. Configuration is now built and stored in thread private data
    * src/experimental/rivetInspect.c: code in Rivet_ReadConfParameter adapted to reflect changes
    in configuration record definitions
