@@ -1,6 +1,8 @@
 2014-09-08 Massimo Manghi <mxmanghi@apache.org>
     * src/experimental/mod_rivet.c: handling per dir configurations that have no Rivet directives
-    in them, thus leaving the patch field NULL.
+    in them, thus leaving the 'path' field NULL.
+    * src/experimental/TclWebapache.c: reenabling CACHE_SIZE and CACHE_FREE in the environment
+    array
 
 2014-09-07 Massimo Manghi <mxmanghi@apache.org>
     * src/experimental/mod_rivet.h: add field path to rivet_server_conf. This field carries
